cmake_minimum_required(VERSION 3.7)
project(ffmpeg)

add_definitions(-D_ISOC99_SOURCE -DHAVE_AV_CONFIG_H)

include_directories(../.)
include_directories(.././)

set(SRC_FILES
        3dostr.c
        4xm.c
        a64.c
        aacdec.c
        aadec.c
        ac3dec.c
        acm.c
        act.c
        adp.c
        ads.c
        adtsenc.c
        adxdec.c
        aea.c
        afc.c
        aiffdec.c
        aiffenc.c
        aixdec.c
        allformats.c
        amr.c
        anm.c
        apc.c
        ape.c
        apetag.c
        apngdec.c
        apngenc.c
        aqtitledec.c
        asf.c
        asfcrypt.c
        asfdec_f.c
        asfdec_o.c
        asfenc.c
        assdec.c
        assenc.c
        ast.c
        astdec.c
        astenc.c
        async.c
        au.c
        audiointerleave.c
        avc.c
        avidec.c
        avienc.c
        avio.c
        aviobuf.c
        avlanguage.c
        avr.c
        avs.c
        bethsoftvid.c
        bfi.c
        bink.c
        bintext.c
        bit.c
        bmv.c
        boadec.c
        brstm.c
        c93.c
        cache.c
        caf.c
        cafdec.c
        cafenc.c
        cavsvideodec.c
        cdg.c
        cdxl.c
        cinedec.c
        concat.c
        concatdec.c
        crcenc.c
        crypto.c
        cutils.c
        dashenc.c
        data_uri.c
        dauddec.c
        daudenc.c
        dcstr.c
        dfa.c
        diracdec.c
        dnxhddec.c
        dsfdec.c
        dsicin.c
        dss.c
        dtsdec.c
        dtshddec.c
        dump.c
        dv.c
        dvbsub.c
        dvbtxt.c
        dvenc.c
        dxa.c
        eacdata.c
        electronicarts.c
        epafdec.c
        ffmdec.c
        ffmenc.c
        ffmetadec.c
        ffmetaenc.c
        fifo.c
        file.c
        filmstripdec.c
        filmstripenc.c
        flac_picture.c
        flacdec.c
        flacenc.c
        flacenc_header.c
        flic.c
        flvdec.c
        flvenc.c
        format.c
        framecrcenc.c
        framehash.c
        frmdec.c
        fsb.c
        ftp.c
        g722.c
        g723_1.c
        g729dec.c
        gdv.c
        genh.c
        gif.c
        gifdec.c
        gopher.c
        gsmdec.c
        gxf.c
        gxfenc.c
        h261dec.c
        h263dec.c
        h264dec.c
        hashenc.c
        hdsenc.c
        hevc.c
        hevcdec.c
        hls.c
        hlsenc.c
        hlsproto.c
        hnm.c
        http.c
        httpauth.c
        icecast.c
        icodec.c
        icoenc.c
        id3v1.c
        id3v2.c
        id3v2enc.c
        idcin.c
        idroqdec.c
        idroqenc.c
        iff.c
        ilbc.c
        img2.c
        img2_alias_pix.c
        img2_brender_pix.c
        img2dec.c
        img2enc.c
        ingenientdec.c
        ipmovie.c
        ircam.c
        ircamdec.c
        ircamenc.c
        isom.c
        iss.c
        iv8.c
        ivfdec.c
        ivfenc.c
        jacosubdec.c
        jacosubenc.c
        jvdec.c
        latmenc.c
        lmlm4.c
        loasdec.c
        lrc.c
        lrcdec.c
        lrcenc.c
        lvfdec.c
        lxfdec.c
        m4vdec.c
        matroska.c
        matroskadec.c
        matroskaenc.c
        md5proto.c
        metadata.c
        mgsts.c
        microdvddec.c
        microdvdenc.c
        mj2kdec.c
        mkvtimestamp_v2.c
        mlpdec.c
        mlvdec.c
        mm.c
        mmf.c
        mms.c
        mmsh.c
        mmst.c
        mov.c
        mov_chan.c
        movenc.c
        movenccenc.c
        movenchint.c
        mp3dec.c
        mp3enc.c
        mpc.c
        mpc8.c
        mpeg.c
        mpegenc.c
        mpegts.c
        mpegtsenc.c
        mpegvideodec.c
        mpjpeg.c
        mpjpegdec.c
        mpl2dec.c
        mpsubdec.c
        msf.c
        msnwc_tcp.c
        mtaf.c
        mtv.c
        musx.c
        mux.c
        mvdec.c
        mvi.c
        mxf.c
        mxfdec.c
        mxfenc.c
        mxg.c
        ncdec.c
        network.c
        nistspheredec.c
        nsvdec.c
        nullenc.c
        nut.c
        nutdec.c
        nutenc.c
        nuv.c
        oggdec.c
        oggenc.c
        oggparsecelt.c
        oggparsedaala.c
        oggparsedirac.c
        oggparseflac.c
        oggparseogm.c
        oggparseopus.c
        oggparseskeleton.c
        oggparsespeex.c
        oggparsetheora.c
        oggparsevorbis.c
        oggparsevp8.c
        oma.c
        omadec.c
        omaenc.c
        options.c
        os_support.c
        paf.c
        pcm.c
        pcmdec.c
        pcmenc.c
        pjsdec.c
        pmpdec.c
        prompeg.c
        protocols.c
        psxstr.c
        pva.c
        pvfdec.c
        qcp.c
        qtpalette.c
        r3d.c
        rawdec.c
        rawenc.c
        rawutils.c
        rawvideodec.c
        rdt.c
        realtextdec.c
        redspark.c
        replaygain.c
        riff.c
        riffdec.c
        riffenc.c
        rl2.c
        rm.c
        rmdec.c
        rmenc.c
        rmsipr.c
        rpl.c
        rsd.c
        rso.c
        rsodec.c
        rsoenc.c
        rtmphttp.c
        rtmppkt.c
        rtmpproto.c
        rtp.c
        rtpdec.c
        rtpdec_ac3.c
        rtpdec_amr.c
        rtpdec_asf.c
        rtpdec_dv.c
        rtpdec_g726.c
        rtpdec_h261.c
        rtpdec_h263.c
        rtpdec_h263_rfc2190.c
        rtpdec_h264.c
        rtpdec_hevc.c
        rtpdec_ilbc.c
        rtpdec_jpeg.c
        rtpdec_latm.c
        rtpdec_mpa_robust.c
        rtpdec_mpeg12.c
        rtpdec_mpeg4.c
        rtpdec_mpegts.c
        rtpdec_qcelp.c
        rtpdec_qdm2.c
        rtpdec_qt.c
        rtpdec_rfc4175.c
        rtpdec_svq3.c
        rtpdec_vc2hq.c
        rtpdec_vp8.c
        rtpdec_vp9.c
        rtpdec_xiph.c
        rtpenc.c
        rtpenc_aac.c
        rtpenc_amr.c
        rtpenc_chain.c
        rtpenc_h261.c
        rtpenc_h263.c
        rtpenc_h263_rfc2190.c
        rtpenc_h264_hevc.c
        rtpenc_jpeg.c
        rtpenc_latm.c
        rtpenc_mpegts.c
        rtpenc_mpv.c
        rtpenc_vc2hq.c
        rtpenc_vp8.c
        rtpenc_vp9.c
        rtpenc_xiph.c
        rtpproto.c
        rtsp.c
        rtspdec.c
        rtspenc.c
        samidec.c
        sapdec.c
        sapenc.c
        sauce.c
        sbgdec.c
        sccdec.c
        sccenc.c
        sdp.c
        sdr2.c
        sdsdec.c
        sdxdec.c
        segafilm.c
        segment.c
        shortendec.c
        sierravmd.c
        siff.c
        smacker.c
        smjpeg.c
        smjpegdec.c
        smjpegenc.c
        smoothstreamingenc.c
        smush.c
        sol.c
        soxdec.c
        soxenc.c
        spdif.c
        spdifdec.c
        spdifenc.c
        srtdec.c
        srtenc.c
        srtp.c
        srtpproto.c
        stldec.c
        subfile.c
        subtitles.c
        subviewer1dec.c
        subviewerdec.c
        supdec.c
        svag.c
        swf.c
        swfdec.c
        swfenc.c
        takdec.c
        tcp.c
        tedcaptionsdec.c
        tee.c
        tee_common.c
        teeproto.c
        thp.c
        tiertexseq.c
        tls.c
        tls_securetransport.c
        tmv.c
        tta.c
        ttaenc.c
        tty.c
        txd.c
        udp.c
        uncodedframecrcenc.c
        unix.c
        url.c
        urldecode.c
        utils.c
        v210.c
        vag.c
        vc1dec.c
        vc1test.c
        vc1testenc.c
        vivo.c
        voc.c
        voc_packet.c
        vocdec.c
        vocenc.c
        vorbiscomment.c
        vpcc.c
        vpk.c
        vplayerdec.c
        vqf.c
        w64.c
        wavdec.c
        wavenc.c
        wc3movie.c
        webm_chunk.c
        webmdashenc.c
        webpenc.c
        webvttdec.c
        webvttenc.c
        westwood_aud.c
        westwood_vqa.c
        wsddec.c
        wtv_common.c
        wtvdec.c
        wtvenc.c
        wv.c
        wvdec.c
        wvedec.c
        wvenc.c
        xa.c
        xmv.c
        xvag.c
        xwma.c
        yop.c
        yuv4mpegdec.c
        yuv4mpegenc.c
        )

add_library(avformat ${SRC_FILES})
